src/test/ui/yield_closure/missing_return.rs
#![feature(generators, yield_closures)]

fn main() {
    let _ = || {
        yield 0;
    };
}
